# lofiHunter

./: CMakeLists.txt  README.md  catalog.txt  shell.nix
itemAssets/: room.json  room_Player1.json  room_Player2.json  room_player1.json
src/: AudioBackend.cpp  AudioBackend.h  EconomyManager.cpp  EconomyManager.h  TextureLoader.cpp  TextureLoader.h  main.cpp
web/: App.jsx
web/web-client/: package-lock.json  package.json
